use github pages url for link

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             I'm a full-stack developer, artist, and Github enthusiast working mainly in Ruby and PHP.
             I have also worked with typefaces and fonts, and have fallen in love with Semetic and Latin typography.
             Recently I discovered <a href="http://www.urbit.org/">Urbit</a> and have helped make a
-            <a href="/nock.js/nock.htm">Web REPL</a> for Nock.</p>
+            <a href="http://anoxic.github.io/nock.js/nock.htm">Web REPL</a> for Nock.</p>
         </div>
         
         <h1>Some Things I've Made</h1>
